feat: Create PATCH /order-items/{order_id}/{memu_id} endpoint
ORM의 OrderItem 객체와 이름이 겹쳐서 rest_schemas.py의 OrderItem 모델을 OrderItemSummaryResponse로 이름 바꿈
